PROJECT(pictorial_structure2)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(Boost_USE_STATIC_LIBS ON)

IF(CMAKE_COMPILER_IS_GNUCC)
ENDIF(CMAKE_COMPILER_IS_GNUCC)

IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
  IF(CMAKE_BUILD_TYPE MATCHES Release)
    ADD_DEFINITIONS(-O3)
  ENDIF(CMAKE_BUILD_TYPE MATCHES Release)

  SET(CMAKE_CXX_FLAGS "-W -Wall -pedantic --std=c++0x")
ELSEIF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
  IF(CMAKE_BUILD_TYPE MATCHES Release)
    ADD_DEFINITIONS(-O3 -fexpensive-optimizations)
  ENDIF(CMAKE_BUILD_TYPE MATCHES Release)

  SET(CMAKE_CXX_FLAGS "-W -Wall -pedantic --std=c++0x")
ENDIF ()

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

ADD_SUBDIRECTORY(0mq)
ADD_SUBDIRECTORY(src)
